# arcaflow-plugin-elasticsearch

./: Dockerfile  Dockerfile.integration  README.md  docker-compose-dev.yml  docker-compose-integration.yml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_elasticsearch/: elasticsearch_plugin.py  es_plugin.py
tests/integration/: test_arcaflow_plugin_elasticsearch.py  test_es_plugin.py
tests/unit/: test_arcaflow_plugin_elasticsearch.py  test_es_plugin.py
